--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=5000
-DB_NAME=online_store
+DB_NAME=article_ned
 DB_USER=postgres
 DB_PASSWORD=admin
 DB_HOST=localhost
 DB_PORT=5432
-SECRET_KEY=this_is_the_most_secret_key
+SECRET_KEY=nazarenko_egor_secretni_asp
